# redirect

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prospector.yaml  .snyk  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  development.ini  docker-compose.yaml  gunicorn.conf.py  production.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  testing.ini
.github/: dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  clean.yaml  codeql.yaml  main.yaml  rebuild.yaml
ci/: config.yaml  dpkg-versions.yaml  requirements.txt
redirect/: __init__.py  pshell.py  routes.py
redirect/views/: redirect.py
tests/: conftest.py  hosts.yaml  test_acceptance.py  test_functional.py  test_views.py
