[tool.black]
line-length = 110
target-version = ["py38"]

[tool.poetry]
name = "redirect"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gunicorn = "22.0.0"
pyramid = "2.0.2"
c2cwsgiutils = { extras = ["standard", "broadcast"], version = "5.1.9" }
pyramid-mako = "1.1.0"
certifi = "2025.7.9"
sentry-sdk = "2.8.0"
redis = "4.4.4"
requests = "2.32.4"
urllib3 = "1.26.20"
idna = "3.7"
html-sanitizer = "2.4.4"

[tool.poetry.dev-dependencies]
prospector = { version = "1.8.4", extras = ["with_bandit", "with_mypy"] }
pytest = "7.2.2"

[tool.poetry.plugins."paste.app_factory"]
main = "redirect:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
