[tool.black]
line-length = 110
target-version = ["py310"]

[tool.poetry]
name = "redirect"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gunicorn = "23.0.0"
pyramid = "2.0.2"
c2cwsgiutils = { extras = ["standard", "broadcast", "oauth2"], version = "6.0.9" }
pyramid-mako = "1.1.0"
certifi = "2026.6.17"
html-sanitizer = "2.4.4"
requests = "2.34.2"
urllib3 = "2.7.0"
idna = "3.15"
lxml = "6.1.1"
lxml-html-clean = "0.4.5"
mako = "1.3.12"
pillow = "12.3.0"
pyjwt = "2.13.0"
ujson = "5.13.0"
webob = "1.8.10"

[tool.poetry.dev-dependencies]
prospector = { version = "1.10.3", extras = ["with_bandit", "with_mypy"] }
pytest = "8.3.5"

[tool.poetry.plugins."paste.app_factory"]
main = "redirect:main"


[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "1.5.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
